--- a/client/src/styling/App.css
+++ b/client/src/styling/App.css
@@ -1,74 +1,10 @@
-/* .react-chatbot-kit-chat-container {
-}
+.app-container {
+   display: flex;
+   height: 100vh;
+   flex-direction: column;
+   background-color: rgb(41, 45, 47);
+   color: white;
+   align-items: center;
+   padding-top: 100px;
 
-.react-chatbot-kit-chat-inner-container {
 }
-
-.react-chatbot-kit-chat-header {
-}
-
-.react-chatbot-kit-chat-input-container {
-}
-
-.react-chatbot-kit-chat-message-container {
-}
-
-.react-chatbot-kit-chat-input {
-}
-
-.react-chatbot-kit-chat-input-form {
-}
-
-.react-chatbot-kit-chat-input::placeholder {
-}
-
-.react-chatbot-kit-chat-btn-send {
-}
-
-.react-chatbot-kit-chat-btn-send-icon {
-}
-
-.react-chatbot-kit-chat-bot-message-container {
-}
-
-.react-chatbot-kit-chat-bot-avatar-container {
-}
-
-.react-chatbot-kit-chat-bot-avatar-icon {
-}
-
-.react-chatbot-kit-chat-bot-avatar-letter {
-}
-
-.react-chatbot-kit-chat-bot-message {
-}
-
-.react-chatbot-kit-chat-bot-message-arrow {
-}
-
-.react-chatbot-kit-chat-bot-loading-icon-container {
-}
-
-.chatbot-loader-container {
-}
-
-#chatbot-loader #chatbot-loader-dot1 {
-}
-
-#chatbot-loader #chatbot-loader-dot2 {
-}
-
-#chatbot-loader #chatbot-loader-dot3 {
-}
-
-.react-chatbot-kit-error {
-}
-
-.react-chatbot-kit-error-container {
-}
-
-.react-chatbot-kit-error-header {
-}
-
-.react-chatbot-kit-error-docs {
-} */
