--- a/client/src/styling/styles.css
+++ b/client/src/styling/styles.css
@@ -1,5 +1,5 @@
 :root {
-   /* colors from coolors.co */
+   /* color palette from coolors.co */
    --red-orange: #f06543ff;
    --pale-white: #e8e9ebff;
    --saturated-white: #e0dfd5ff;
